Add Vue frontend and refine JSON-DSL engine
Add a new lightweight Vue 3 + Vite frontend (frontend/) including package/config files, lint/format/type/test setup, examples, route/store/component scaffolding, and a GitHub workflow to run CI for the frontend. Update documentation (AGENT_BASELINE.md) to clarify typed vs legacy JSON-DSL usage. Refactor and extend the xa-mass-core JSON-DSL stack (parsing, evaluation, processors, compiled expressions) and related tests to drive typed JSON DSL through the new parser/processor engine while keeping legacy JsonDslEngine compatibility; also update QLExpressRuleEvaluator in xa-mass-engine. These changes enable a typed JSON-DSL mainline and front-end CI/console for the XA Mass control console.