@@ -1,325 +1,127 @@
 package com.xa.mass.base.jsondsl.processor;
 
 import com.xa.mass.base.jsondsl.builtin.JsonDslException;
+import com.xa.mass.base.jsondsl.model.JsonDslContext;
 import com.xa.mass.base.jsondsl.model.JsonDslDefinition;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-/**
- * DefaultFilterProcessor 重构后的测试
- */
-public class DefaultFilterProcessorTest {
+class DefaultFilterProcessorTest {
 
-    private DefaultFilterProcessor processor;
-    private JsonDslDefinition definition;
-    private ProcessingContext context;
+    private final DefaultFilterProcessor processor = new DefaultFilterProcessor();
 
-    @BeforeEach
-    void setUp() {
-        processor = new DefaultFilterProcessor();
-        definition = new JsonDslDefinition("test-filter", JsonDslDefinition.DslType.FILTER);
-        context = new ProcessingContext("test-context");
+    @Test
+    void shouldFilterSingleBeanAndReturnFailureReasons() {
+        JsonDslDefinition definition = new JsonDslDefinition("filter-user", JsonDslDefinition.DslType.FILTER);
+        definition.setFieldDsl(Map.of(
+                "age", Map.of("$EXPR", "age >= 18"),
+                "status", Map.of("$EXPR", "'READY'.equals(status)")
+        ));
+
+        TestBean passed = new TestBean("Alice", 20, "READY");
+        TestBean failed = new TestBean("Bob", 16, "PENDING");
+
+        FilterResult<TestBean> passedResult = processor.filter(passed, definition, new ProcessingContext("test"));
+        FilterResult<TestBean> failedResult = processor.filter(failed, definition, new ProcessingContext("test"));
+
+        assertEquals(1, passedResult.getPassedCount());
+        assertEquals(0, passedResult.getFailedCount());
+        assertEquals(0, failedResult.getPassedCount());
+        assertEquals(1, failedResult.getFailedCount());
+        assertEquals(2, failedResult.getFailed().get(0).getReasons().size());
+        assertTrue(failedResult.getFailed().get(0).getReasons().stream().anyMatch(reason -> reason.contains("field 'age' failed")));
+        assertTrue(failedResult.getFailed().get(0).getReasons().stream().anyMatch(reason -> reason.contains("field 'status' failed")));
     }
 
     @Test
-    void testFilterSingleWithJavaBean() {
-        // 创建测试用户
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-        user.setStatus("active");
+    void shouldSupportCombineRulesAndContextVariables() {
+        JsonDslDefinition definition = new JsonDslDefinition("filter-context", JsonDslDefinition.DslType.FILTER);
+        definition.setFieldDsl(Map.of(
+                "status", Map.of("$EXPR", "expectedStatus.equals(status)")
+        ));
+        definition.setCombineDsl(Map.of(
+                "adult-ready", Map.of("$EXPR", "age >= minAge && 'READY'.equals(status)")
+        ));
 
-        // 设置过滤条件：年龄大于20
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 20"));
-        definition.setFieldDsl(fieldDsl);
+        ProcessingContext context = new ProcessingContext("test");
+        context.setVariable("expectedStatus", "READY");
+        context.setParameter("minAge", 18);
 
+        TestBean passed = new TestBean("Alice", 20, "READY");
+        TestBean failed = new TestBean("Bob", 16, "READY");
 
+        FilterResult<TestBean> passedResult = processor.filter(passed, definition, context);
+        FilterResult<TestBean> failedResult = processor.filter(failed, definition, context);
+
+        assertTrue(passedResult.isAllPassed());
+        assertTrue(failedResult.isAllFailed());
+        assertEquals(1, failedResult.getFailed().get(0).getReasons().size());
+        assertTrue(failedResult.getFailed().get(0).getReasons().get(0).contains("combine rule 'adult-ready' failed"));
     }
 
     @Test
-    void testFilterSingleWithMap() {
-        // 创建测试Map
-        Map<String, Object> userMap = new HashMap<>();
-        userMap.put("name", "Bob");
-        userMap.put("age", 30);
-        userMap.put("status", "active");
+    void shouldReportStrictModeMissingVariablesAsFailureReasons() {
+        JsonDslContext dslContext = new JsonDslContext();
+        dslContext.setStrict(true);
 
-        // 设置过滤条件：年龄大于25且状态为active
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 25"));
-        fieldDsl.put("status", Map.of("$EXPR", "status == 'active'"));
-        definition.setFieldDsl(fieldDsl);
+        JsonDslDefinition definition = new JsonDslDefinition("strict-filter", JsonDslDefinition.DslType.FILTER);
+        definition.setContext(dslContext);
+        definition.setFieldDsl(Map.of("status", "&missing"));
 
+        FilterResult<TestBean> result = processor.filter(new TestBean("Alice", 20, "READY"), definition, new ProcessingContext("test"));
 
+        assertTrue(result.isAllFailed());
+        assertEquals(1, result.getFailed().get(0).getReasons().size());
+        assertTrue(result.getFailed().get(0).getReasons().get(0).contains("field 'status' error: Unresolved variable: &missing"));
     }
 
     @Test
-    void testFilterBatchWithMixedTypes() {
-        // 创建混合类型的测试数据
-        List<Object> testData = Arrays.asList(
-                createTestUser("Alice", 25, "active"),
-                createTestMap("Bob", 35, "inactive"),
-                createTestUser("Charlie", 45, "active")
+    void shouldPreservePerItemReasonsWhenFilteringBatch() {
+        JsonDslDefinition definition = new JsonDslDefinition("batch-filter", JsonDslDefinition.DslType.FILTER);
+        definition.setFieldDsl(Map.of(
+                "age", Map.of("$EXPR", "age >= 18")
+        ));
+        definition.setCombineDsl(Map.of(
+                "ready-only", Map.of("$EXPR", "'READY'.equals(status)")
+        ));
+
+        List<TestBean> users = List.of(
+                new TestBean("Alice", 20, "READY"),
+                new TestBean("Bob", 16, "READY"),
+                new TestBean("Charlie", 30, "PENDING")
         );
 
-        // 设置过滤条件：年龄大于30
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 30"));
-        definition.setFieldDsl(fieldDsl);
+        FilterResult<TestBean> result = processor.filterList(users, definition, new ProcessingContext("test"));
 
-        // 测试批量过滤
-        List<Object> filtered = JsonDslProcessorEngine.filterBatch(testData, definition, context, Object.class);
-        assertNotNull(filtered);
-        assertTrue(filtered.size() >= 0, "应该有过滤结果");
+        assertEquals(1, result.getPassedCount());
+        assertEquals(2, result.getFailedCount());
+        assertTrue(result.getFailed().stream().anyMatch(failure -> failure.getData().getName().equals("Bob")
+                && failure.getReasons().stream().anyMatch(reason -> reason.contains("field 'age' failed"))));
+        assertTrue(result.getFailed().stream().anyMatch(failure -> failure.getData().getName().equals("Charlie")
+                && failure.getReasons().stream().anyMatch(reason -> reason.contains("combine rule 'ready-only' failed"))));
     }
 
     @Test
-    void testFilterWithCombineConditions() {
-        // 创建测试用户
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-        user.setStatus("active");
+    void shouldRejectNullInputs() {
+        JsonDslDefinition definition = new JsonDslDefinition("filter-user", JsonDslDefinition.DslType.FILTER);
+        definition.setFieldDsl(Map.of("age", Map.of("$EXPR", "age >= 18")));
 
-        // 设置字段条件
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 20"));
-        definition.setFieldDsl(fieldDsl);
-
-        // 设置组合条件
-        Map<String, Object> combineDsl = new HashMap<>();
-        combineDsl.put("nameCheck", Map.of("$EXPR", "name != null && name.length() > 0"));
-        combineDsl.put("statusCheck", Map.of("$EXPR", "status == 'active'"));
-        definition.setCombineDsl(combineDsl);
-
-
+        assertThrows(JsonDslException.class, () -> processor.filter(null, definition, new ProcessingContext("test")));
+        assertThrows(JsonDslException.class, () -> processor.filterList(null, definition, new ProcessingContext("test")));
     }
 
-    @Test
-    void testFilterWithNullInput() {
-        // 测试空输入
-        assertThrows(JsonDslException.class, () -> {
-            processor.filter(null, definition, context);
-        });
-    }
+    static class TestBean {
+        private final String name;
+        private final Integer age;
+        private final String status;
 
-    @Test
-    void testFilterWithNullDefinition() {
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-
-        assertThrows(JsonDslException.class, () -> {
-            processor.filter(user, null, context);
-        });
-    }
-
-    @Test
-    void testFilterWithNullContext() {
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-
-        assertThrows(JsonDslException.class, () -> {
-            processor.filter(user, definition, null);
-        });
-    }
-
-    @Test
-    void testFilterWithDebugMode() {
-        // 测试调试模式
-        context.setDebug(true);
-
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 30")); // 故意设置不满足的条件
-        definition.setFieldDsl(fieldDsl);
-
-        Object result = processor.filter(user, definition, context);
-
-    }
-
-    @Test
-    void testFilterWithInvalidExpression() {
-        TestUser user = new TestUser();
-        user.setName("Alice");
-        user.setAge(25);
-
-        // 设置无效的表达式
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "invalid expression"));
-        definition.setFieldDsl(fieldDsl);
-
-
-    }
-
-    @Test
-    void testFilterBatchWithDetails() {
-        // 创建测试数据
-        List<TestUser> testUsers = Arrays.asList(
-                createTestUser("Alice", 15, "active"),  // 年龄不满足
-                createTestUser("Bob", 25, "inactive"),  // 状态不满足
-                createTestUser("Charlie", 35, "active") // 都满足
-        );
-
-        // 设置过滤条件
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 20"));
-        fieldDsl.put("status", Map.of("$EXPR", "status == 'active'"));
-        definition.setFieldDsl(fieldDsl);
-
-        // 测试批量过滤（带详情）
-        FilterResult<TestUser> result = JsonDslProcessorEngine.filterBatchWithDetails(testUsers, definition, context, TestUser.class);
-        List<TestUser> passed = result.getPassed();
-        List<FilterResult.FilterFailure<TestUser>> failed = result.getFailed();
-
-        assertNotNull(passed);
-        assertNotNull(failed);
-        assertEquals(1, passed.size(), "应该只有Charlie通过过滤");
-        assertEquals(2, failed.size(), "应该有2个失败的对象");
-    }
-
-    @Test
-    public void testFilterWithDetailedFailureReasons() {
-        // 创建过滤条件：年龄必须大于20，状态必须是active
-        JsonDslDefinition filterDef = new JsonDslDefinition("detailed-filter", JsonDslDefinition.DslType.FILTER);
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 20"));
-        fieldDsl.put("status", Map.of("$EXPR", "status == 'active'"));
-        filterDef.setFieldDsl(fieldDsl);
-
-        // 测试用户：年龄15（不满足），状态inactive（不满足）
-        TestUser user = new TestUser("YoungUser", 15, "inactive");
-
-        FilterProcessor processor = new DefaultFilterProcessor();
-        ProcessingContext context = new ProcessingContext();
-        context.setDebug(true);
-
-        FilterResult<TestUser> result = processor.filter(user, filterDef, context);
-
-        // 验证失败
-        assertThat(result.getPassed()).isEmpty();
-        assertThat(result.getFailed()).hasSize(1);
-
-        // 验证详细的失败原因
-        List<String> failReasons = result.getFailed().get(0).getReasons();
-        assertThat(failReasons).hasSize(2);
-        assertThat(failReasons).anyMatch(reason -> reason.contains("age") && reason.contains("不满足条件"));
-        assertThat(failReasons).anyMatch(reason -> reason.contains("status") && reason.contains("不满足条件"));
-
-        System.out.println("失败原因: " + failReasons);
-    }
-
-    @Test
-    public void testFilterListWithDetailedFailureReasons() {
-        // 创建过滤条件：年龄必须大于20
-        JsonDslDefinition filterDef = new JsonDslDefinition("age-filter", JsonDslDefinition.DslType.FILTER);
-        Map<String, Object> fieldDsl = new HashMap<>();
-        fieldDsl.put("age", Map.of("$EXPR", "age > 20"));
-        filterDef.setFieldDsl(fieldDsl);
-
-        // 测试用户列表：包含通过和不通过的用户
-        List<TestUser> users = Arrays.asList(
-                createTestUser("Alice", 25, "active"),   // 通过
-                createTestUser("Bob", 15, "active"),     // 不通过：年龄太小
-                createTestUser("Charlie", 35, "active")  // 通过
-        );
-
-        FilterProcessor processor = new DefaultFilterProcessor();
-        ProcessingContext context = new ProcessingContext();
-
-        FilterResult<TestUser> result = processor.filterList(users, filterDef, context);
-
-        // 验证结果
-        assertThat(result.getPassed()).hasSize(2);
-        assertThat(result.getFailed()).hasSize(1);
-
-        // 验证失败用户的详细原因
-        List<String> failReasons = result.getFailed().get(0).getReasons();
-        assertThat(failReasons).hasSize(1);
-        assertThat(failReasons.get(0)).contains("age").contains("不满足条件");
-
-        System.out.println("通过的用户: " + result.getPassed().stream().map(TestUser::getName).collect(Collectors.toList()));
-        System.out.println("失败的用户: " + result.getFailed().get(0).getData().getName());
-        System.out.println("失败原因: " + failReasons);
-    }
-
-    @Test
-    public void testFilterWithCombinationConditions() {
-        // 创建组合条件：年龄大于20 且 状态为active
-        JsonDslDefinition filterDef = new JsonDslDefinition("combination-filter", JsonDslDefinition.DslType.FILTER);
-        Map<String, Object> combineDsl = new HashMap<>();
-        combineDsl.put("ageAndStatus", Map.of("$EXPR", "age > 20 && status == 'active'"));
-        filterDef.setCombineDsl(combineDsl);
-
-        // 测试用户：年龄15，状态active（组合条件不满足）
-        TestUser user = new TestUser("YoungUser", 15, "active");
-
-        FilterProcessor processor = new DefaultFilterProcessor();
-        ProcessingContext context = new ProcessingContext();
-
-        FilterResult<TestUser> result = processor.filter(user, filterDef, context);
-
-        // 验证失败
-        assertThat(result.getPassed()).isEmpty();
-        assertThat(result.getFailed()).hasSize(1);
-
-        // 验证组合条件的失败原因
-        List<String> failReasons = result.getFailed().get(0).getReasons();
-        assertThat(failReasons).hasSize(1);
-        assertThat(failReasons.get(0)).contains("组合条件").contains("ageAndStatus");
-
-        System.out.println("组合条件失败原因: " + failReasons);
-    }
-
-    private TestUser createTestUser(String name, int age) {
-        TestUser user = new TestUser();
-        user.setName(name);
-        user.setAge(age);
-        return user;
-    }
-
-    private TestUser createTestUser(String name, int age, String status) {
-        TestUser user = new TestUser();
-        user.setName(name);
-        user.setAge(age);
-        user.setStatus(status);
-        return user;
-    }
-
-    private Map<String, Object> createTestMap(String name, int age, String status) {
-        Map<String, Object> userMap = new HashMap<>();
-        userMap.put("name", name);
-        userMap.put("age", age);
-        userMap.put("status", status);
-        return userMap;
-    }
-
-    /**
-     * 测试用户类
-     */
-    public static class TestUser {
-        private String name;
-        private Integer age;
-        private String status;
-
-        public TestUser() {
-        }
-
-        public TestUser(String name, int age, String status) {
+        TestBean(String name, Integer age, String status) {
             this.name = name;
             this.age = age;
             this.status = status;
@@ -329,24 +131,12 @@ public class DefaultFilterProcessorTest {
             return name;
         }
 
-        public void setName(String name) {
-            this.name = name;
-        }
-
         public Integer getAge() {
             return age;
-        }
-
-        public void setAge(Integer age) {
-            this.age = age;
         }
 
         public String getStatus() {
             return status;
         }
-
-        public void setStatus(String status) {
-            this.status = status;
-        }
     }
-} 
+}
